--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^3.10.3",
     "graphql": "^16.6.0",
     "json-server": "^0.17.0",
     "nodemon": "^2.0.20"
